<?xml version="1.0"?>
<package>
  <name>laser_assembler</name>
  <version>0.1.0</version>
  <description>simple laser assembler and to point cloud converter</description>

  <maintainer email="behnam.asadi@gmail.com">Behnam Asadi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roscpp</run_depend>
</package>
